--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,11 +7,10 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="styles.css"/> <!-- Link to the external CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
   </head>
   <body>
     <nav class="navbar navbar-inverse justify-content-center">
@@ -38,22 +38,17 @@
       </div>
     </nav>
     <div class="container-fluid main1">
-      <div class="row">
-        <div class="col-xs-6">
-          <h1>Solar Panels like nowhere else</h1>
-          <p>Solar panels turn the sun's energy into usable electricity. Solar panels – also known as <strong>photovoltaics (PV)</strong> – contain electrons, which start moving when hit with direct sunlight. The moving electrons create an electric current, kind of like a stream of energy, which is then channelled and turned into usable electricity. The electricity is then sent out of the solar panel through wires, ready to power your gadgets, lights or even your electric vehicle, or it can be sent back to the grid, with suppliers paying you for that energy.</p>
-          <form action="https://www.google.com">
-            <input class="readmore1" type="submit" value="Read More"/>
-          </form>
-        </div>
-        <div class="overlay">
-          <div class="overlay-content">
-            <h2>Exclusive Offer!</h2>
-            <p>Get a free consultation for solar panel installation. Limited time offer!</p>
-            <button class="btn btn-primary">Learn More</button>
-          </div>
-        </div>
-        <img class="solar" src="solar.jpg" alt="house with solar panels"/>
+      <div class="content">
+        <h1>Solar Panels like nowhere else</h1>
+        <p>Solar panels turn the sun's energy into usable electricity. Solar panels – also known as <strong>photovoltaics (PV)</strong> – contain electrons, which start moving when hit with direct sunlight. The moving electrons create an electric current, kind of like a stream of energy, which is then channelled and turned into usable electricity. The electricity is then sent out of the solar panel through wires, ready to power your gadgets, lights or even your electric vehicle, or it can be sent back to the grid, with suppliers paying you for that energy.</p>
+        <form action="https://www.google.com">
+          <input class="readmore1" type="submit" value="Read More"/>
+        </form>
+      </div>
+      <div class="sidebar">
+        <h3>Sidebar Content</h3>
+        <p>This is the sidebar area where you can add additional content, links, or other sections related to your website.</p>
+        <p>For example, you could display a list of services, testimonials, or links to other important pages.</p>
       </div>
     </div>
   </body>
