--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,7 +52,10 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-      <h2>Related Information</h2>
+      <h2>Live Green Market News</h2>
+      <form action="https://www.google.com">
+        <input class="readmore2" type="submit" value="Read More"/>
+      </form>
     </div>
   </body>
 </html>
