--- a/client/public/index.html
+++ b/client/public/index.html
@@ -53,9 +53,14 @@
     <!-- Sidebar -->
     <div class="sidebar">
       <h2>Live Green Market News</h2>
+      <div id="root"></div>
       <form action="https://www.google.com">
         <input class="readmore2" type="submit" value="Read More"/>
       </form>
     </div>
   </body>
+
+  <script src="build/static/js/main.chunk.js"></script>
+  <script src="build/static/js/1.chunk.js"></script>
+  <script src="build/static/js/bundle.js"></script>
 </html>
