--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Carbon Footprint Calculator</a></li>
+            <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="#">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
             <li><a href="#">About</a></li>
@@ -157,7 +157,8 @@
 
 <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
   <div class="container text-center">
-    <small>Copyright &copy; Your Website</small>
+    <img src="icon.png" alt="logo" width="50px">
+    <small>Copyright &copy; Rolsa Technologies</small>
   </div>
 </footer>
     
