--- a/client/public/cfc.html
+++ b/client/public/cfc.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="#">Carbon Footprint Calculator</a></li>
+            <li class="active"><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="#">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
             <li><a href="#">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
