--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
             <li><a href="#">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
