--- a/client/public/login.html
+++ b/client/public/login.html
@@ -61,5 +61,12 @@
             <p>New here? <a href="account.html">Create an Account</a></p>
         </div>
     </div>
+
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+        <div class="container text-center">
+          <img src="icon.png" alt="logo" width="50px">
+          <small>Copyright &copy; Rolsa Technologies</small>
+        </div>
+      </footer>
 </body>
 </html>
