--- a/client/public/cfc.html
+++ b/client/public/cfc.html
@@ -14,7 +14,6 @@
   </head>
 
   <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-inverse justify-content-center">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -31,7 +30,7 @@
             <li class="active"><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="#">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
