--- a/client/public/about.html
+++ b/client/public/about.html
@@ -31,7 +31,7 @@
             <li class="active"><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li><a href="account.php"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
