--- a/client/public/login.html
+++ b/client/public/login.html
@@ -58,7 +58,7 @@
             </div>
             <button type="submit">Login</button>
             </form>
-            <p>New here? <a href="account.html">Create an Account</a></p>
+            <p>New here? <a href="account.php">Create an Account</a></p>
         </div>
     </div>
 
