--- a/client/public/cfc.html
+++ b/client/public/cfc.html
@@ -33,7 +33,7 @@
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="account.php"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
