--- a/client/public/account.html
+++ b/client/public/account.html
@@ -30,9 +30,9 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
-            <li><a href="#">Book Consultation</a></li>
+            <li><a href="consultation.html">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
@@ -44,7 +44,7 @@
         <div class="wrapper"> 
             <h1>Sign Up</h1>
             <p id="error-message"></p>
-            <form action="index.php" method="post" id="form">
+            <form action="signup.php" method="post" id="form">
                 <div>
                     <label for="firstname-input"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Z"/></svg></label>
                     <input required type="text" name="firstname" id="firstname-input" placeholder="First Name">
