--- a/client/public/cfc.html
+++ b/client/public/cfc.html
@@ -28,7 +28,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="cfc.html">Carbon Footprint Calculator</a></li>
-            <li><a href="#">Book Consultation</a></li>
+            <li><a href="consultation.html">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
