--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,9 +26,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
-            <li><a href="#">Book Consultation</a></li>
+            <li><a href="consultation.html">Book Consultation</a></li>
             <li><a href="#">Green Energy Market News</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
