working log in yippie!!

--- a/client/public/consultation.html
+++ b/client/public/consultation.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="consultation.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+    <title>Consultation</title>
   </head>
   <body>
     <nav class="navbar navbar-inverse justify-content-center">
@@ -38,7 +38,7 @@
     </nav>
     <div class="container">
       <h2>Book a Consultation</h2>
-      <form action="submit_consultation.php" method="POST">
+      <form action="#" method="POST">
         <div class="form-group">
           <label for="name">Full Name:</label>
           <input type="text" class="form-control" id="name" name="name" required>
@@ -62,5 +62,11 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+    <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <img src="icon.png" alt="logo" width="50px">
+        <small>Copyright &copy; Rolsa Technologies</small>
+      </div>
+    </footer>
   </body>
 </html>
