--- a/client/public/login.html
+++ b/client/public/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="account.css" />
+    <link rel="stylesheet" href="login.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
@@ -34,7 +34,7 @@
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li class="active"><a href="account.php"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
@@ -58,7 +58,7 @@
             </div>
             <button type="submit">Login</button>
             </form>
-            <p>New here? <a href="account.php">Create an Account</a></p>
+            <p>New here? <a href="account.html">Create an Account</a></p>
         </div>
     </div>
 
