--- a/client/public/consultation.html
+++ b/client/public/consultation.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="consultation.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Consultation</title>
+    <title>Bookings</title>
   </head>
   <body>
     <nav class="navbar navbar-inverse justify-content-center">
