--- a/client/public/dashboard.html
+++ b/client/public/dashboard.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
-    <title>Carbon Footprint Calculator</title>
+    <title>Dashboard</title>
   </head>
 
   <body>
@@ -51,10 +51,10 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Dashboard</a></li>
-            <li><a href="#">Age</a></li>
-            <li><a href="#">Gender</a></li>
-            <li><a href="#">Geo</a></li>
+            <li class="active"><a href="#">Profile</a></li>
+            <li><a href="#">Bookings</a></li>
+            <li><a href="#">Security</a></li>
+            <li><a href="#">Log Out</a></li>
           </ul>
         </div>
       </div>
@@ -65,10 +65,10 @@
         <div class="col-sm-3 sidenav hidden-xs">
           
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#section1">Dashboard</a></li>
-            <li><a href="#section2">Age</a></li>
-            <li><a href="#section3">Gender</a></li>
-            <li><a href="#section3">Geo</a></li>
+            <li class="active"><a href="#section1">Profile</a></li>
+            <li><a href="#section2">Bookings</a></li>
+            <li><a href="#section3">Security</a></li>
+            <li><a href="account.php">Log Out</a></li>
           </ul><br>
         </div>
         <br>
