green market button in navbar now directs to page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,7 +45,7 @@
         <div class="col-xs-6">
           <h1>Solar Panels like <em>nowhere</em> else</h1>
           <p>Solar panels turn the sun's energy into usable electricity. Solar panels – also known as <strong>photovoltaics (PV)</strong> – contain electrons, which start moving when hit with direct sunlight. The moving electrons create an electric current, kind of like a stream of energy, which is then channelled and turned into usable electricity. The electricity is then sent out of the solar panel through wires, ready to power your gadgets, lights or even your electric vehicle, or it can be sent back to the grid, with suppliers paying you for that energy. <strong>Rolsa Technologies</strong> offers<em> cutting edge</em></strong> solar panels starting from just £6000. </p>
-          <form action="https://www.google.com">
+          <form action="marketnews.html">
             <input class="readmore1" type="submit" href="marketnews.html" value="Read More"/>
           </form>
         </div>
@@ -73,7 +73,7 @@
           <p>Fossil fuels, when burned to produce energy, cause harmful greenhouse gas emissions, such as carbon dioxide. Generating renewable energy creates far lower emissions than burning fossil fuels. Transitioning from fossil fuels, which currently account for the lion’s share of emissions, to renewable energy is key to addressing the climate crisis.</p>
           <p>Renewables are now cheaper in most countries, and generate three times more jobs than fossil fuels.</p>
           <p>The global renewable energy market, valued at USD 954 billion in 2023, is projected to grow to USD 1,574.17 billion by 2032, with a CAGR of 5.56%. China is a major player, accounting for a large share of global renewable capacity deployment.</p>
-          <input class="readmore1" type="submit" href="marketnews.html" value="Read More"/>
+          <input class="readmore1" type="submit" onclick="window.location='marketnews.html'" value="Read More"/>
         </div>
         <img src="hydro.png" class="sidepic" alt="hydroelectric power dam">
     
