--- a/client/public/about.html
+++ b/client/public/about.html
@@ -28,7 +28,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="consultation.html">Book Consultation</a></li>
-            <li><a href="#">Green Energy Market News</a></li>
+            <li><a href="marketnews.html">Green Energy Market News</a></li>
             <li class="active"><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
