--- a/client/public/consultation.html
+++ b/client/public/consultation.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li class="active"><a href="#">Book Consultation</a></li>
-            <li><a href="#">Green Energy Market News</a></li>
+            <li><a href="marketnews.html">Green Energy Market News</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
