--- a/client/public/login.html
+++ b/client/public/login.html
@@ -30,7 +30,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="consultation.html">Book Consultation</a></li>
-            <li><a href="#">Green Energy Market News</a></li>
+            <li><a href="marketnews.html">Green Energy Market News</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
