--- a/client/public/marketnews.html
+++ b/client/public/marketnews.html
@@ -26,10 +26,10 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="cfc.html">Carbon Footprint Calculator</a></li>
             <li><a href="consultation.html">Book Consultation</a></li>
-            <li><a  class="active" href="marketnews.html">Green Energy Market News</a></li>
+            <li class="active"><a  href="marketnews.html">Green Energy Market News</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
