Added live news feed to the green market page

--- a/client/public/marketnews.html
+++ b/client/public/marketnews.html
@@ -38,4 +38,8 @@
         </div>
       </div>
     </nav>
-  </body>
+
+    <div class="main1">
+        <rssapp-wall id="rZQYsP7uOOZlhaFQ"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+    </div>
+</body>
