--- a/client/public/cfc.html
+++ b/client/public/cfc.html
@@ -33,13 +33,13 @@
             <li><a href="about.html">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="account.html"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
+            <li><a href="account.php"><span class="glyphicon glyphicon-log-in"></span> Account</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Carbon Footprint Calculator Form -->
+   
     <div class="container">
       <h2 class="text-center">Carbon Footprint Calculator</h2>
       <form id="carbonForm">
