--- a/client/public/dashboard.html
+++ b/client/public/dashboard.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-  
+    <link rel="stylesheet" href="dashboardlanding.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
@@ -36,4 +36,18 @@
       </div>
     </div>
   </nav>
+
+  <div class="container">
+    <div class="wrapper">
+        
+    </div>
+</div>
+
+<footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <img src="icon.png" alt="logo" width="50px">
+      <small>Copyright &copy; Rolsa Technologies</small>
+    </div>
+  </footer>
+
 </body>
