added dashboard functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,7 +55,7 @@
 
   
     <div class="sidebar">
-      <h2>Live Green Market News</h2>
+      <h2>Live Green Market Stocks</h2>
       <ul id="news-list">
       <p>Enter the stock symbol below to fetch the stock price data and see a graph.</p>
       <input type="text" id="stockSymbol" placeholder="Enter stock symbol (e.g., AAPL)" class="form-control" />
