--- a/client/public/notifications.html
+++ b/client/public/notifications.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="dashboardlanding.css"/>
+    <link rel="stylesheet" href="notifications.css"/>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -43,9 +43,9 @@
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
         <ul class="nav nav-pills nav-stacked">
-          <li class="activeprofile"><a href="#">Profile</a></li>
-          <li class="notactive"><a href="security.html">Security</a></li>
-          <li class="notactive"><a href="notifications.html">Notifications</a></li>
+          <li><a href="dashboard.html">Profile</a></li>
+          <li><a href="security.html">Security</a></li>
+          <li class="activeprofile"><a href="notifications.html">Notifications</a></li>
         </ul><br>
       </div>
     </div>
