--- a/client/public/consultation.html
+++ b/client/public/consultation.html
@@ -7,6 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="consultation.css" />
+    <!-- Elfsight Website Translator | Untitled Website Translator -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div style="background-color: #D8F1A0" class="elfsight-app-f5b27d08-c1d3-4f99-ae23-145b20b92581" data-elfsight-app-lazy></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Bookings</title>
