--- a/client/public/security.html
+++ b/client/public/security.html
@@ -46,7 +46,7 @@
   <div class="profile-layout">
     <div class="sidenav">
       <ul class="nav nav-pills nav-stacked">
-        <li ><a href="dashboard.html">Profile</a></li>
+        <li ><a href="dashboard.php">Profile</a></li>
         <li class="activeprofile"><a href="security.html">Security</a></li>
         <li class="notactive"><a href="notifications.html">Notifications</a></li>
         <li class="notactive"><a href="account.php">Log Out</a></li>
