--- a/client/public/notifications.html
+++ b/client/public/notifications.html
@@ -46,7 +46,7 @@
     <div class="sidenav">
       <ul class="nav nav-pills nav-stacked">
         <li><a href="dashboard.php">Profile</a></li>
-        <li><a href="security.html">Security</a></li>
+        <li><a href="security.php">Security</a></li>
         <li class="activeprofile"><a href="notifications.html">Notifications</a></li>
         <li><a href="account.php">Log Out</a></li>
       </ul><br>
@@ -61,11 +61,6 @@
       <hr class="solid">
       <p>Title: Customer</p>
       <hr class="solid">
-  
-      <h1>Languages</h1>
-      <h4>Choose what language to display in</h4>
-      <hr class="solid">
-      <p>Language: English</p>
     </div>
   </div>
   
